@@ -1,117 +1,80 @@
 package unicam.filiera.model;
 
-import java.time.LocalDateTime;
+import lombok.Getter;
+import unicam.filiera.dto.EventoTipo;
+
+import java.time.LocalDate;
+import java.util.Collections;
 import java.util.List;
 
+/**
+ * Evento specifico: Visita su Invito.
+ * Include i campi aggiuntivi rispetto a {@link Evento}.
+ */
+@Getter
 public class VisitaInvito extends Evento {
-    private final String organizzatore;
-    private final int numeroMinPartecipanti;
+
+    private final Long id;
     private final List<String> destinatari;
 
     private VisitaInvito(Builder b) {
         super(
-                b.id,
-                b.dataInizio,
-                b.dataFine,
-                b.prezzo,
+                b.nome,
                 b.descrizione,
                 b.indirizzo,
-                b.stato
+                b.dataInizio,
+                b.dataFine,
+                b.creatoDa,
+                b.stato,
+                EventoTipo.VISITA
         );
-        this.organizzatore = b.organizzatore;
-        this.numeroMinPartecipanti = b.numeroMinPartecipanti;
-        this.destinatari = List.copyOf(b.destinatari);
+        this.id = b.id;
+        this.destinatari = b.destinatari == null
+                ? List.of()
+                : Collections.unmodifiableList(List.copyOf(b.destinatari));
     }
 
-    public String getOrganizzatore() {
-        return organizzatore;
-    }
+    /* ================== BUILDER ================== */
+    public static class Builder {
+        private Long id;
+        private String nome;
+        private String descrizione;
+        private String indirizzo;
+        private LocalDate dataInizio;
+        private LocalDate dataFine;
+        private String creatoDa;
+        private StatoEvento stato;
 
-    public int getNumeroMinPartecipanti() {
-        return numeroMinPartecipanti;
-    }
+        private List<String> destinatari;
 
-    public List<String> getDestinatari() {
-        return destinatari;
+        public Builder id(Long i) { this.id = i; return this; }
+        public Builder nome(String n) { this.nome = n; return this; }
+        public Builder descrizione(String d) { this.descrizione = d; return this; }
+        public Builder indirizzo(String i) { this.indirizzo = i; return this; }
+        public Builder dataInizio(LocalDate di) { this.dataInizio = di; return this; }
+        public Builder dataFine(LocalDate df) { this.dataFine = df; return this; }
+        public Builder creatoDa(String u) { this.creatoDa = u; return this; }
+        public Builder stato(StatoEvento s) { this.stato = s; return this; }
+        public Builder destinatari(List<String> d) { this.destinatari = d; return this; }
+
+        public VisitaInvito build() {
+            if (nome == null || descrizione == null || indirizzo == null
+                    || dataInizio == null || dataFine == null
+                    || creatoDa == null || stato == null) {
+                throw new IllegalStateException("⚠ Campi obbligatori mancanti");
+            }
+            if (dataFine.isBefore(dataInizio)) {
+                throw new IllegalStateException("⚠ La data di fine deve essere successiva a quella di inizio");
+            }
+            if (destinatari == null || destinatari.isEmpty()) {
+                throw new IllegalStateException("⚠ Devi specificare almeno un destinatario");
+            }
+            return new VisitaInvito(this);
+        }
     }
 
     @Override
     public String toString() {
-        return String.format(
-                "VisitaInvito[id=%d, %s→%s, prezzo=%.2f, minPartec=%d, org=%s, dest=%s]",
-                getId(), getDataInizio(), getDataFine(),
-                getPrezzo(), numeroMinPartecipanti,
-                organizzatore, String.join(",", destinatari)
-        );
-    }
-
-    public static class Builder {
-        private long id;
-        private LocalDateTime dataInizio;
-        private LocalDateTime dataFine;
-        private double prezzo;
-        private String descrizione;
-        private String indirizzo;
-        private String organizzatore;
-        private int numeroMinPartecipanti;
-        private List<String> destinatari;
-        private StatoEvento stato = StatoEvento.IN_PREPARAZIONE;
-
-        public Builder id(long id) {
-            this.id = id;
-            return this;
-        }
-
-        public Builder dataInizio(LocalDateTime dt) {
-            this.dataInizio = dt;
-            return this;
-        }
-
-        public Builder dataFine(LocalDateTime dt) {
-            this.dataFine = dt;
-            return this;
-        }
-
-        public Builder prezzo(double p) {
-            this.prezzo = p;
-            return this;
-        }
-
-        public Builder descrizione(String d) {
-            this.descrizione = d;
-            return this;
-        }
-
-        public Builder indirizzo(String i) {
-            this.indirizzo = i;
-            return this;
-        }
-
-        public Builder organizzatore(String o) {
-            this.organizzatore = o;
-            return this;
-        }
-
-        public Builder numeroMinPartecipanti(int n) {
-            this.numeroMinPartecipanti = n;
-            return this;
-        }
-
-        public Builder destinatari(List<String> dest) {
-            this.destinatari = dest;
-            return this;
-        }
-
-        public Builder stato(StatoEvento s) {
-            this.stato = s;
-            return this;
-        }
-
-        public VisitaInvito build() {
-            if (dataInizio == null || dataFine == null || descrizione == null
-                    || indirizzo == null || organizzatore == null || destinatari == null)
-                throw new IllegalStateException("Campi obbligatori mancanti");
-            return new VisitaInvito(this);
-        }
+        return super.toString() + " → destinatari=" + destinatari;
     }
 }
